Add delta diff tool with dark mode and refactor zsh functions
- Add diff.zsh with diffc and diffs functions for colored diffs
- Configure delta as git pager with dark mode enabled
- Clean up zsh functions directory (remove unused files)

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,17 +5,18 @@
 	email = ryad.meftahi@gmail.com
 [core]
   editor = nvim
-  pager = delta
+	pager = delta
 	hooksPath = /Users/ryad/.git/hooks
 [alias]
   rb = "for-each-ref --count=10 --sort=-committerdate refs/heads/ --format='%(refname:short)'"
 
 [interactive]
-  diffFilter = delta --color-only
+	diffFilter = delta --color-only
 
 [delta]
-  navigate = true# use n and N to move between diff sections
-  light = false# set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+	navigate = true
+	light = false
+	dark = true
 
 [merge]
   conflictstyle = diff3
